--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
 	border: 3px rgba(50,50,50, .6) solid;
 	background-color: rgb(230, 230, 230);
 }
+#interact{
+	height: 60px
+}
 #interact > button{
 	width: 57px;
 	height: 57px;
@@ -25,26 +28,28 @@
 }
 
 #tamagotchi {
-	width: 258px;
+	width: 260px;
 	height:180px;
 	margin: 0 20px;
-	border: 1px rgba(150, 150, 150, .5) solid;
 	text-align: center;
 }
 #tamagotchi > form > input{
-	width: 180px;
+	width: 190px;
 	height: 40px;
 	font-size: 16px;
+	border: 0;
 }
-#tamagotchi > form > button{
+#form > button{
 	width: 60px;
-	height: 40px;
+	height: 42px;
+	font-size: 16px;
 }
 #tamagotchi > h2 {
-	margin: 10px;
+	margin: 0;
+	height: 20px;
 }
 #tamagotchi > img {
-	width: 258px;
+	width: 260px;
 }
 #stats {
 	height: 60px;
