--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 #device {
 	width: 500px;
 	height: 500px;
-	border: 5px rgb(100, 180, 250) solid;
+	border: 5px rgba(100, 180, 250, .8) solid;
 	border-radius: 250px 250px 180px 180px;
-	background-color: rgba(250, 180, 180, .8);
+	background-color: rgb(255, 160, 160);
 }
 #display {
 	width: 300px;
@@ -33,12 +33,13 @@
 	margin: 0 20px;
 	text-align: center;
 }
-#tamagotchi > form > input{
+#form > input{
 	width: 190px;
 	height: 40px;
 	font-size: 16px;
 	border: 0;
 }
+
 #form > button{
 	width: 60px;
 	height: 42px;
@@ -46,7 +47,8 @@
 }
 #tamagotchi > h2 {
 	margin: 0;
-	height: 20px;
+	padding-top: 5px;
+	height: 40px;
 }
 #tamagotchi > img {
 	width: 260px;
